tests/grammars/reject/undefined-field.aug
grammar undefined-field {
  token EOL '\n'

  start: $4 EOL
}
